# Agentix-CLI-tool-powered-by-Ollama

./: README.md  agent.py  config.py  launch.sh  logger.py  main.py  pyproject.toml  requirements.txt  safety.py  tools.py
agent-files/: demo.txt
agent-files/agent-files/whatsapp-clone/: README.md  main.py  requirements.txt
agent-files/agent-files/whatsapp-clone/templates/: index.html
